force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/ND_Comments__c.field-meta.xml
<CustomField>
    <fullName>ND_Comments__c</fullName>
    <description>Provide comments related to the Campaign Event nomination.</description>
    <inlineHelpText>Provide comments related to the Campaign Event nomination.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>