force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/ND_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>ND_Fiscal_Year__c</fullName>
    <defaultValue>TEXT(

IF(

MONTH(TODAY())&lt;7,

YEAR(TODAY()),

YEAR(TODAY())+1

)
)</defaultValue>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Fiscal_Year</valueSetName>
    </valueSet>
</CustomField>