force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/nd_Stage__c.field-meta.xml
<CustomField>
    <fullName>nd_Stage__c</fullName>
    <description>Describes the Stage of the Campaign Event Nomination</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>nd_Campaign_Event_Stage</valueSetName>
    </valueSet>
</CustomField>