force-app/main/default/objects/ND_Campaign_Event_Nomination__c/validationRules/Fundraiser_Participation_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Fundraiser_Participation_Values</fullName>
    <active>true</active>
    <description>Only allow a Fundraiser to select the Participation Values including Declined, No-Response, Request Alternate Date, or To Invite.</description>
    <errorConditionFormula>AND(

(OR($UserRole.Name = &apos;Regional Director&apos;,$UserRole.Name = &apos;Development Coordinator&apos;)),

OR(ISPICKVAL( nd_Status__c , &quot;Nomination Approved&quot;),ISPICKVAL( nd_Status__c , &quot;Nomination Denied&quot;), ISPICKVAL( nd_Status__c , &quot;Registered&quot;), ISPICKVAL( nd_Status__c , &quot;Canceled&quot;), ISPICKVAL( nd_Status__c , &quot;Attended&quot;), ISPICKVAL( nd_Status__c , &quot;No-Show&quot;))

)</errorConditionFormula>
    <errorDisplayField>nd_Status__c</errorDisplayField>
    <errorMessage>Please select a Status value of Accepted Verbal Invite, Declined Verbal Invite, or Request Alternate Date</errorMessage>
</ValidationRule>