force-app/main/default/objects/ND_Campaign_Event_Nomination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>nd_Stage__c</columns>
    <columns>nd_Status__c</columns>
    <columns>ND_Primary_Relationship_Manager__c</columns>
    <columns>ND_Strategy__c</columns>
    <columns>ND_Participation__c</columns>
    <columns>ND_Event_Type__c</columns>
    <columns>ND_Household__c</columns>
    <columns>ND_Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>